--- a/template/style/style.css
+++ b/template/style/style.css
@@ -44,6 +44,11 @@ aside {
     padding: 1%;
 }
 
+#menu {
+    display: flex;
+    justify-content: space-between;
+}
+
 #header {
     text-align: center;
     border-bottom: 2px solid #574B33;
@@ -98,6 +103,10 @@ aside section h2 {
 
 #cover {
     text-align: center;
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0px 0px 16px;
 }
 
 @media only screen and (max-width: 480px) {
