add support page

--- a/template/style/style.css
+++ b/template/style/style.css
@@ -46,7 +46,14 @@ aside {
 
 #menu {
     display: flex;
-    justify-content: space-between;
+}
+
+#menu a {
+    margin-right: 12px;
+}
+
+#lang {
+    margin-left: auto;
 }
 
 #header {
